fix(ui): Trying to fix how modals work on mobile
Trying to get mobile scrolll containers working properly.

--- a/interface/src/components/Modal.module.scss
+++ b/interface/src/components/Modal.module.scss
@@ -3,23 +3,72 @@
 
 $basePadding: 2 * variables.$size;
 
+.modalRoot {
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  z-index: 50;
+}
+
+.modalBackdrop {
+  display: none;
+  inset: 0px;
+  background-color: rgba(var(--background), 0.5);
+
+  transition-property: opacity !important;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration: 150ms !important;
+
+  backdrop-filter: blur(4px) brightness(0.5);
+
+  @media (min-width: variables.$smallScreen) {
+    display: inline;
+    position: fixed;
+  }
+}
+
+.modalContainer {
+  position: fixed;
+  inset: 0px;
+  z-index: 10;
+  overflow-y: auto;
+}
+
+.modalWindowWrapper {
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0;
+
+  min-height: 100%;
+
+  @media (min-width: variables.$smallScreen) {
+    padding: 4 * variables.$size;
+  }
+}
+
 .modalWindow {
   background-color: var(--background);
-  overflow: visible;
-  padding: $basePadding;
-  position: relative;
-
-  // On mobile these are the values
-  height: 100vh;
-  width: 100vw;
+  position: absolute;
+  top: 0px;
+  min-height: fit-content;
+  height: 100%;
+  width: 100%;
   border-radius: 0px;
+  // Handle screen edges on mobile devices.
+  padding-top: calc($basePadding + env(safe-area-inset-top));
+  padding-left: calc($basePadding + env(safe-area-inset-left));
+  padding-right: calc($basePadding + env(safe-area-inset-left));
   padding-bottom: calc($basePadding + env(safe-area-inset-bottom));
 
   @media (min-width: variables.$smallScreen) {
+    position: relative;
     border-radius: var(--border-radius);
     height: auto;
     width: 100%;
     max-width: 128 * variables.$size;
-    padding-bottom: $basePadding;
+    padding: $basePadding;
   }
 }
